--- a/parts/motiondetect.tex
+++ b/parts/motiondetect.tex
@@ -1,79 +1,79 @@
-\documentclass[11pt]{article} % use larger type; default would be 10pt
-\usepackage[utf8]{inputenc} % set input encoding (not needed with XeLaTeX)
-
-%%% PAGE DIMENSIONS
-\usepackage{geometry} % to change the page dimensions
-\geometry{a4paper} % or letterpaper (US) or a5paper or....
-\newcommand{\tab}{\hspace*{2em}}
-
-%%% PACKAGES
-\usepackage{graphicx} % support the \includegraphics command and options
-\usepackage{wrapfig} % Figure wrapping
-% \usepackage[parfill]{parskip} % Activate to begin paragraphs with an empty line rather than an indent
-\usepackage{booktabs} % for much better looking tables
-\usepackage{array} % for better arrays (eg matrices) in maths
-\usepackage{paralist} % very flexible & customisable lists (eg. enumerate/itemize, etc.)
-\usepackage{verbatim} % adds environment for commenting out blocks of text & for better verbatim
-\usepackage{subfig} % make it possible to include more than one captioned figure/table in a single float
-\usepackage{url}
-\usepackage{enumerate}
-\usepackage{cleveref}  %cites figures intelligently
-\usepackage{import} % document structuring
-\usepackage{float}  %These two ensure that table position follows text by specifying {table}[H]
-\restylefloat{table}
-
-%CODE LISTINGS
-\usepackage{color}
-\usepackage{listings}
-
-\lstset{
-	tabsize=4,
-%	language=matlab,
-        	basicstyle=\scriptsize,
-%     	upquote=true,
-       	aboveskip={\baselineskip},
-        	columns=fixed,
-        	showstringspaces=false,
-        	extendedchars=true,
-        	breaklines=true,
-	prebreak = \raisebox{0ex}[0ex][0ex]{\ensuremath{\hookleftarrow}},
-	frame=single,
-        	showtabs=false,
-        	showspaces=false,
-        	showstringspaces=false,
-        	identifierstyle=\ttfamily,
-        	keywordstyle=\color[rgb]{0,0,1},
-        	commentstyle=\color[rgb]{0.133,0.545,0.133},
-        	stringstyle=\color[rgb]{0.627,0.126,0.941},
-	language=C++
-}
-
-%%% HEADERS & FOOTERS
-\usepackage{fancyhdr} % This should be set AFTER setting up the page geometry
-\pagestyle{fancy} % options: empty , plain , fancy
-\renewcommand{\headrulewidth}{0pt} % customise the layout...
-\lhead{}\chead{}\rhead{}
-\lfoot{}\cfoot{\thepage}\rfoot{}
-
-%%% SECTION TITLE APPEARANCE
-\usepackage{sectsty}
-\allsectionsfont{\sffamily\mdseries\upshape} % (See the fntguide.pdf for font help)
-\usepackage{titlesec}
-%\titleformat{\subsection}[runin]{\mdseries\bf}{\thesubsection}{1em}{}
-%\titleformat{\subsubsection}[runin]{\mdseries\bf\underline\large}{\thesubsection}{1 em}{\vspace{-5 pt}}
-
-\usepackage{footbib}
-
-% (This matches ConTeXt defaults)
-
-%%% ToC (table of contents) APPEARANCE
-%\usepackage[nottoc,notlof,notlot]{tocbibind} % Put the bibliography in the ToC
-\usepackage[titles,subfigure]{tocloft} % Alter the style of the Table of Contents
-\renewcommand{\cftsecfont}{\rmfamily\mdseries\upshape}
-\renewcommand{\cftsecpagefont}{\rmfamily\mdseries\upshape} % No bold!
-
-\begin{document}
-%% END Article customizations
+%\documentclass[11pt]{article} % use larger type; default would be 10pt
+%\usepackage[utf8]{inputenc} % set input encoding (not needed with XeLaTeX)
+%
+%%%% PAGE DIMENSIONS
+%\usepackage{geometry} % to change the page dimensions
+%\geometry{a4paper} % or letterpaper (US) or a5paper or....
+%\newcommand{\tab}{\hspace*{2em}}
+%
+%%%% PACKAGES
+%\usepackage{graphicx} % support the \includegraphics command and options
+%\usepackage{wrapfig} % Figure wrapping
+%% \usepackage[parfill]{parskip} % Activate to begin paragraphs with an empty line rather than an indent
+%\usepackage{booktabs} % for much better looking tables
+%\usepackage{array} % for better arrays (eg matrices) in maths
+%\usepackage{paralist} % very flexible & customisable lists (eg. enumerate/itemize, etc.)
+%\usepackage{verbatim} % adds environment for commenting out blocks of text & for better verbatim
+%\usepackage{subfig} % make it possible to include more than one captioned figure/table in a single float
+%\usepackage{url}
+%\usepackage{enumerate}
+%\usepackage{cleveref}  %cites figures intelligently
+%\usepackage{import} % document structuring
+%\usepackage{float}  %These two ensure that table position follows text by specifying {table}[H]
+%\restylefloat{table}
+%
+%%CODE LISTINGS
+%\usepackage{color}
+%\usepackage{listings}
+%
+%\lstset{
+%	tabsize=4,
+%%	language=matlab,
+%        	basicstyle=\scriptsize,
+%%     	upquote=true,
+%       	aboveskip={\baselineskip},
+%        	columns=fixed,
+%        	showstringspaces=false,
+%        	extendedchars=true,
+%        	breaklines=true,
+%	prebreak = \raisebox{0ex}[0ex][0ex]{\ensuremath{\hookleftarrow}},
+%	frame=single,
+%        	showtabs=false,
+%        	showspaces=false,
+%        	showstringspaces=false,
+%        	identifierstyle=\ttfamily,
+%        	keywordstyle=\color[rgb]{0,0,1},
+%        	commentstyle=\color[rgb]{0.133,0.545,0.133},
+%        	stringstyle=\color[rgb]{0.627,0.126,0.941},
+%	language=C++
+%}
+%
+%%%% HEADERS & FOOTERS
+%\usepackage{fancyhdr} % This should be set AFTER setting up the page geometry
+%\pagestyle{fancy} % options: empty , plain , fancy
+%\renewcommand{\headrulewidth}{0pt} % customise the layout...
+%\lhead{}\chead{}\rhead{}
+%\lfoot{}\cfoot{\thepage}\rfoot{}
+%
+%%%% SECTION TITLE APPEARANCE
+%\usepackage{sectsty}
+%\allsectionsfont{\sffamily\mdseries\upshape} % (See the fntguide.pdf for font help)
+%\usepackage{titlesec}
+%%\titleformat{\subsection}[runin]{\mdseries\bf}{\thesubsection}{1em}{}
+%%\titleformat{\subsubsection}[runin]{\mdseries\bf\underline\large}{\thesubsection}{1 em}{\vspace{-5 pt}}
+%
+%\usepackage{footbib}
+%
+%% (This matches ConTeXt defaults)
+%
+%%%% ToC (table of contents) APPEARANCE
+%%\usepackage[nottoc,notlof,notlot]{tocbibind} % Put the bibliography in the ToC
+%\usepackage[titles,subfigure]{tocloft} % Alter the style of the Table of Contents
+%\renewcommand{\cftsecfont}{\rmfamily\mdseries\upshape}
+%\renewcommand{\cftsecpagefont}{\rmfamily\mdseries\upshape} % No bold!
+%
+%\begin{document}
+%%% END Article customizations
 
 
 
@@ -139,19 +139,24 @@ Images in this format allow subsampling to reduce the color band resolution (U a
 Supported UYVY image sizes are: (2592x1968, 1280x960, 800x600, 640x480, 320x240, 160x120)
 
 \subsection{OpenCV vs CImg}
+\paragraph{Now that I had my camera driver configured, I needed to choose an appropriate image library to perform the processing. Technically I could have written my own library class to perform the simple image subtraction and addition functions that I wanted, but there may have been more features that I might want to use later in development and so it was useful to see what was available. OpenCV and CImg are both common imaging libraries for C, C++, and Python, for use with real-time image proccessing.  Both are used widely in computer vision applications, and both contain approximately the same core capabilities, though OpenCV has more extraneous features.}
 \subsubsection{OpenCV}
-\paragraph{Now that I had my camera driver configured, I needed to choose an appropriate image library to perform the processing. Technically I could have written my own library class to perform the simple image subtraction and addition functions that I wanted, but there may have been more to offer down the line and I wanted to see what was available. OpenCV and CImg are both common imaging libraries for C, C++, and Python, for use with real-time image proccessing.  Both are used widely in computer vision applications, and both contain approximately the same core capabilities, though OpenCV has more extraneous features.}
 \paragraph{The Open Source Computer Vision Library (or OpenCV) was developed by Intel for use with computer vision applications, but since was dropped and is now maintained by Willow Garage and Itseez.
-\\OpenCV comes with many useful functions for motion detection: image subtraction, image averaging, normalising, and even its own method for tracking movement. It has an image format called IPLImage and inorder to preform operations I have to convert from FCam's relatively unknown Fcam::Image format to IPLImage. This proved difficult.
+\\OpenCV comes with many useful functions for motion detection: image subtraction, averaging, normalising, and even its own method for tracking movement. The older C-based version of OpenCV uses an image format called IPLImage which needs to contain all the image data in order to perform any processing on it, but since version 2.1 the IPLImage format was replaced by cv::Mat which was more C++ orientated and bears many of the extended structural similarities of a matrix struct. This enables it to hold as many different colour channels as it needs where previously the IPLImage format had only permitted four.
+
+Motion can be detected through changes in colour and/or changes in intensity. A motion detector that harnesses changes in both colour and intensity will be more informative than one that measures changes in just intensity. But speed must be taken into account too, and an image with color has pixel values at least four times the size (32-bit) of that which measures just greyscale intensity (8-bit), meaning it will either require more reources or more time to determine whether motion has occured or not . I also reasoned that changes in an image which occur due to changes in colour is not significant enough to warrant motion, since brightness should decrease drastically too.
+
+For these reasons, I surmised that the IPLImage format with the limited number of color channels was enough to perform image processing on, and so cv::Mat was ignored.
+
+In order to perform imaging operations on the frames captured by FCam, I would need to find a way to convert from the FCam::Image to IPLImage. This proved diffucult.
 }
-\paragraph{The FCam Image format is made up of:
-FCam::Image::Image(
-     int width,
-     int height,
-     Imageformat f,
-     unsigned char* data,
-     int srcByesPerRow
-)
+\paragraph{The FCam Image format is made up of:\\
+\tab FCam::Image::Image(\\
+\tab\tab int width,  int height,\\
+\tab\tab Imageformat f,\\
+\tab\tab unsigned char* data,\\
+\tab\tab int srcByesPerRow\\
+)\\
 The IPLImage has BGR channel order (i.e the first channel is blue, second is green, third is red. This is different from standard RGB formats). I attempted to convert to a grayscale IPLImage by doing:}
 \begin{frame}[fragile]
 \lstinputlisting[title=\textbf{Source Code: IPLconvert.cpp}]{../Code/API_Examples/IPLconvert.cpp}
@@ -165,7 +170,7 @@ A few hours of trawling through the Maemo reading lists came up with a bug repor
 For this reason OpenCV had to be abandoned and a new image processing library had to be used.
 }
 \subsubsection{CImg}
-\paragraph{CImg was suggested by my project supervisor after we discussed the bugs I had been experiencing. CImg is relateivly bug free since it does not exit in any packaged form. In fact all the functions and image processing capabilities are contained within a single 40,000 lined header file coming up to 2.54MB in size. \\Despite the jaw-dropping overhead of including this file in development process, Qt only had to parse the functions within it once and it was set to go.
+\paragraph{CImg was suggested by my project supervisor after we discussed the bugs I had been experiencing. CImg is relateivly bug free since it does not exit in any packaged form. In fact all the functions and image processing capabilities are contained within a single header file containing 45,000 lines of code and coming up to 2.54MB in size. \\Despite the substantial overhead of including this file in development process, Qt only had to parse the functions within it once and it was set to go.
 \\Another bonus is that it removes a dependency from the project, and makes it all that much more portable. One thing I had to do first was to convert from FCam to CImg.
 \\The CImg constructor is formed of:\\
 CImg(const unsigned int width,\\
@@ -189,36 +194,36 @@ Using the same format as the cornell code I attempted to make:}
 \begin{frame}[fragile]
 \lstinputlisting[title=\textbf{Source Code: CImgConvertFcam.cpp}]{../Code/API_Examples/CImgConvertFcam.cpp}
 \end{frame}
-This resulted in images that looked like this:
-\begin{center}
-\begin{wrapfigure}{R}{0.5\textwidth}
-	\vspace{-20pt}
-	\hspace{70pt}
-		\includegraphics[width=0.5\textwidth]{../images/redbuffer1}
-	\vspace{-20pt}
-	\caption{Very red image.}
+This resulted in images that looked like that shown in \cref{img:red}
+\begin{wrapfigure}{L}{0.4\textwidth}
+        	\vspace{0pt}\hspace{-200pt}
+	\centering
+		\includegraphics[width=0.4\textwidth]{../images/redbuffer1}\hspace{-200pt}
+	\caption{Very red image.}\hspace{-200pt}
+	\label{img:red}\hspace{-200pt}
 \end{wrapfigure}
-\end{center}
+
+\begin{wrapfigure}{R}{0.5\textwidth}
+	\vspace{-200pt}
+	\begin{center}
+		\includegraphics[width=0.3\textwidth]{../images/realbuffer2}
+	\end{center}
+	\vspace{-20pt}
+	\caption{Image saved by FCam}\label{img:bedfcam}
+	\vspace{0pt}
+	\begin{center}
+		\includegraphics[width=0.3\textwidth]{../images/blackbuffer3}
+	\end{center}
+	\vspace{-20pt}
+	\caption{Image saved by CImg}\label{img:bedcimg}
+	\vspace{-10pt}
+\end{wrapfigure}
 \paragraph{
 A similar image would appear using imgBuffer[1] instead of imgBuffer[0], and I didn't understand why until I looked up CImg's documentation and realised that out of the 32 channels I was initialising, the first channel is red and that was the only channel I was writing to.
 That is, for a greyscale image from 0-255 at pixel i,j - I was sticking it into CImg\{Red,0,0,0,0....32 times.\}, and thus ending up with a red image.
-\\Once I limited CImg to 1 color channel (i.e. black and white) then I got my desired image as shown by the real and greyscale comparison below:
+\\Once I limited CImg to 1 color channel (i.e. black and white) then I got my desired image as shown by the real and greyscale comparison shown in \cref{img:bedfcam} and \cref{img:bedcimg} respectively.
 }
-\begin{wrapfigure}{R}{0.4\textwidth}
-	\vspace{-20pt}
-	\begin{center}
-		\includegraphics[width=0.4\textwidth]{../images/realbuffer2}
-	\end{center}
-	\vspace{-20pt}
-	\caption{Image saved by FCam}
-	\vspace{0pt}
-	\begin{center}
-		\includegraphics[width=0.4\textwidth]{../images/blackbuffer3}
-	\end{center}
-	\vspace{-20pt}
-	\caption{Image saved by CImg}
-	\vspace{-40pt}
-\end{wrapfigure}
+
 
 \subsection{ImageMagick vs FFMpeg vs VLC vs Mencoder}
 \paragraph{Now that the image processing side of this was underway, I needed a program that could convert a series of images into a movie format so that when the user returns to their motion detector, they can watch all the highlights in the movie file over the course of a few seconds rather than having to flit through each individual image.
@@ -227,12 +232,13 @@ That is, for a greyscale image from 0-255 at pixel i,j - I was sticking it into 
 \paragraph{
 According to the documentation, to convert a series of jpegs to a movie format, all one has to do is call:
 'convert -delay \(\langle\)frametime\(\rangle\) input\_jpegs\_*.jpg output\_movie.mpg'\\
-But this failed with Maemo specific errors:\\\\}
+But this failed with Maemo specific errors:\\}
+\vspace{-20pt}
 \begin{frame}[fragile]
 \lstinputlisting[title=\textbf{Source Code: Errors}]{../Code/errors.cpp}
 \end{frame}
-\paragraph{so I was not able to use imagemagick on the device. This is perhaps a good thing since the imagemagick suite is very large and would be a hefty dependency to add to my project
-}
+so I was not able to use imagemagick on the device. This is perhaps a good thing since the imagemagick suite is very large and would be a hefty dependency to add to my project
+
 \paragraph{FFmpeg was my next and most immediate option - I have used it countless times before to convert movie files and I have found it's libavcodec library a powerful and useful tool in the past. FFMpeg is one of the most popular free multimedia frameworks around, supporting every single codec and format under the sun. It has a fast release time too and when a new format is released it is not usually a long wait before ffmpeg has a supporting library for it. FFmpeg is primarily used to stream, convert, decode, mux, demux and transcode video files into different formats, but is not used for computer vision.\\
 For converting a series of images to a movie file the documentation states that one has to call:\\
 'ffmpeg -i name\_of\_files\_\%05d.jpg -y movie.mpg -r fps'\\
@@ -342,8 +348,8 @@ Using the results from this table I decided to set a threshold of less than 2600
 \\However this threshold was purely for 320x240 images. At that stage I had not considered using different image sizes  for motion detection, but since FCam supported larger sizes I decided to test thresholds for these too, expecting a linear relationship between image size and non-zero count.
 \\For this experiment I repeated the same experiment for the five different image sizes, but have only included the average counts per image size. See \ref{tab:normalised-images} in the Appendix for the complete table.\\
 
-%\import{tables/}{normalised_subtracted_image_size_SHORT.tex}
-\import{../tables/}{normalised_subtracted_image_size_SHORT.tex}
+\import{tables/}{normalised_subtracted_image_size_SHORT.tex}
+%\import{../tables/}{normalised_subtracted_image_size_SHORT.tex}
 
 The chart below in ~\cref{chart:thresholds} is based upon the data in the short table. It takes the maximum averages for each image size and plots them against the image size, with error bars as standard deviation.\\
 
@@ -749,10 +755,10 @@ Autoexpose on updateReference (drastic changes in brightness levels), interval s
 Early on in the development of the app, I came across problems where the FCam driver would not initialize properly, and no warning messages were given. Upon reboot it sometimes worked, but it would tend to work the most when I used the default phone kernel PR-1.3.
 
 For this reason I enabled a kernel check at the start of the Camera thread which would issue out a warning whenever a kernel different from the PR-1.3 kernel was being used. This was a simple shell call to ‘uname -r’. However the root of the problem turned out to be that I was not initializing the camera properly when I started the thread, and so when I fixed this problem, the kernelCheck function became redundant and I deleted it from the source.
-
-\footbibliographystyle{plain}
-\footbibliography{citers}
-
-
-
-\end{document}
+%
+%\footbibliographystyle{plain}
+%\footbibliography{citers}
+%
+%
+%
+%\end{document}
