--- a/parts/timelapse.tex
+++ b/parts/timelapse.tex
@@ -277,7 +277,7 @@ every half hour until 10th October 2012 3pm.
 \end{enumerate}
 All this, purely by using the same argument values.
 
-\section{Software Battles}
+\section{Available Software Evaluation}
 In order to get repeated application calls in the first place, we need to first schedule the jobs. Fremantle uses cron (as do most systems), but it also has it's own native scheduler daemon 'Alarmd'.
 
 \subsection{Cron vs Alarmd}
